--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyegeria"
-version = "5.3.3.7"
+version = "5.3.3.10-dev9"
 
 license = 'Apache 2.0'
 authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
@@ -80,6 +80,7 @@ pytest = "^8.2.2"
     export_terms_to_file = "pyegeria.commands.cat.glossary_actions:export_terms"
     list_deployed_servers = "pyegeria.commands.cat.list_servers_deployed_imp.py:main"
     list_collections = "pyegeria.commands.cat.list_collections:main"
+    get_info_supply_chains = "pyegeria.commands.cat.get_information_supply_chains:main"
 
     monitor_asset_events = "pyegeria.commands.ops.monitor_asset_events:main"
     monitor_coco_status = "pyegeria.commands.ops.monitor_coco_status:main"
