--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyegeria"
-version = "5.3.3.10-dev9"
+version = "5.3.3.10"
 
 license = 'Apache 2.0'
 authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
@@ -80,7 +80,6 @@ pytest = "^8.2.2"
     export_terms_to_file = "pyegeria.commands.cat.glossary_actions:export_terms"
     list_deployed_servers = "pyegeria.commands.cat.list_servers_deployed_imp.py:main"
     list_collections = "pyegeria.commands.cat.list_collections:main"
-    get_info_supply_chains = "pyegeria.commands.cat.get_information_supply_chains:main"
 
     monitor_asset_events = "pyegeria.commands.ops.monitor_asset_events:main"
     monitor_coco_status = "pyegeria.commands.ops.monitor_coco_status:main"
@@ -147,3 +146,5 @@ pytest = "^8.2.2"
     list_valid_metadata_values = "pyegeria.commands.tech.list_valid_metadata_values:main"
     list_anchored_elements = "pyegeria.commands.tech.list_anchored_elements:main"
     list_gov_action_processes = "pyegeria.commands.tech.list_gov_action_processes:main"
+
+    list_info_supply_chains = "pyegeria.commands.tech.list_information_supply_chains:main"
