--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyegeria"
-version = "5.3.4.9"
+version = "5.3.4.24"
 
 license = 'Apache 2.0'
 authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
@@ -77,6 +77,7 @@ isort = "^6.0.0"
     list_deployed_catalogs = "pyegeria.commands.cat.list_deployed_catalogs:main"
     list_deployed_databases = "pyegeria.commands.cat.list_deployed_databases:main"
     list_deployed_schemas = "pyegeria.commands.cat.list_deployed_database_schemas:main"
+    list_deployed_servers = "pyegeria.commands.cat.list_deployed_servers.py:main"
     create_glossary = "pyegeria.commands.cat.glossary_actions:create_glossary"
     delete_glossary = "pyegeria.commands.cat.glossary_actions:delete_glossary"
     create_term = "pyegeria.commands.cat.glossary_actions:create_term"
@@ -84,7 +85,7 @@ isort = "^6.0.0"
     list_glossaries = "pyegeria.commands.cat.list_glossaries:main"
     load_terms_from_file = "pyegeria.commands.cat.glossary_actions:load_terms"
     export_terms_to_file = "pyegeria.commands.cat.glossary_actions:export_terms"
-    list_deployed_servers = "pyegeria.commands.cat.list_servers_deployed_imp.py:main"
+
     list_collections = "pyegeria.commands.cat.list_collections:main"
 
     monitor_asset_events = "pyegeria.commands.ops.monitor_asset_events:main"
