Updated get_asset_lineage_graph for the additional parameters and integrated first version of Freddie markdown processor
Signed-off-by: Dan Wolfson <dwolfson@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyegeria"
-version = "5.3.5.1"
+version = "5.3.6.1"
 
 license = 'Apache 2.0'
 authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
@@ -40,6 +40,7 @@ trogon = "^0.6.0"
 textual = "*"
 mermaid-py = "*"
 psycopg2-binary = "^2.9.9"
+jupyter-notebook-parser = "^0.1.4"
 
 
 [build-system]
@@ -82,8 +83,8 @@ isort = "^6.0.0"
     create_term = "pyegeria.commands.cat.glossary_actions:create_term"
     delete_term = "pyegeria.commands.cat.glossary_actions:delete_term"
     list_glossaries = "pyegeria.commands.cat.list_glossaries:main"
-    load_terms_from_file = "pyegeria.commands.cat.glossary_actions:load_terms"
-    export_terms_to_file = "pyegeria.commands.cat.glossary_actions:export_terms"
+    load_terms_from_csv_file = "pyegeria.commands.cat.glossary_actions:import_terms_csv"
+    export_terms_to_csv_file = "pyegeria.commands.cat.glossary_actions:export_terms_csv"
     create_category = "pyegeria.commands.cat.glossary_actions:create_category"
     update_category = "pyegeria.commands.cat.glossary_actions:update_category"
     delete_category = "pyegeria.commands.cat.glossary_actions:delete_category"
