--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyegeria"
-version = "5.3.6.2.5"
+version = "5.3.6.2.6"
 
 license = 'Apache 2.0'
 authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
@@ -88,6 +88,8 @@ isort = "^6.0.0"
     create_category = "pyegeria.commands.cat.glossary_actions:create_category"
     update_category = "pyegeria.commands.cat.glossary_actions:update_category"
     delete_category = "pyegeria.commands.cat.glossary_actions:delete_category"
+    dr_egeria_md = "pyegeria.commands.cat.dr_egeria_md:main"
+    dr_egeria_jupyter = "pyegeria.commands.cat.dr_egeria_jupyter:main"
 
 
     list_collections = "pyegeria.commands.cat.list_collections:main"
