--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,7 +85,7 @@ isort = "^6.0.0"
     list_glossaries = "pyegeria.commands.cat.list_glossaries:main"
     load_terms_from_csv_file = "pyegeria.commands.cat.glossary_actions:import_terms_csv"
     export_terms_to_csv_file = "pyegeria.commands.cat.glossary_actions:export_terms_csv"
-    list_categories = "pyegeria.commands.cat.list_categoriess:main"
+    list_categories = "pyegeria.commands.cat.list_categories:main"
     create_category = "pyegeria.commands.cat.glossary_actions:create_category"
     update_category = "pyegeria.commands.cat.glossary_actions:update_category"
     delete_category = "pyegeria.commands.cat.glossary_actions:delete_category"
