More Hey Egeria debugging
Signed-off-by: Dan Wolfson <dwolfson@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,7 +92,7 @@ isort = "^6.0.0"
     add_term_to_category = "pyegeria.commands.cat.glossary_actions:add_term_to_category"
     remove_term_from_category = "pyegeria.commands.cat.glossary_actions:remove_term_from_category"
 
-    dr_egeria_md = "pyegeria.commands.cat.dr_egeria_md:process_markdown_file"
+    dr_egeria_md = "pyegeria.commands.cat.dr_egeria_md:main"
     dr_egeria_jupyter = "pyegeria.commands.cat.dr_egeria_jupyter:process_jupyter_notebook"
 
 
