--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyegeria"
-version = "5.3.7"
+version = "5.3.7.3"
 
 license = 'Apache 2.0'
 authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
@@ -26,10 +26,10 @@ packages = [
 
 [tool.poetry.dependencies]
 #python = "^3.11" # 3.12 seemed to fail
-python = "^3.12.3"
+python = "*"
 #python = "^3.13" Need to upgrade jupyter image
 httpx = "*"
-rich = "*"
+rich = "^13.9.4"
 validators = "*"
 urllib3 = "*"
 requests = "*"
