--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyegeria"
-version = "5.3.9.5"
+version = "5.3.9.6"
 
 license = 'Apache 2.0'
 authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
@@ -168,3 +168,4 @@ isort = "^6.0.0"
     list_solution_blueprints = "pyegeria.commands.tech.list_solution_blueprints:main"
     list_solution_roles = "pyegeria.commands.tech.list_solution_roles:main"
     list_solution_components = "pyegeria.commands.tech.list_solution_components:main"
+    delete_element = "pyegeria.commands.tech.generic_actions:delete_element"
