--- a/pyproject_orig.toml
+++ b/pyproject_orig.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyegeria"
-version = "5.3.9.9.6"
+version = "5.3.9.7"
 
 license = 'Apache 2.0'
 authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
@@ -21,10 +21,7 @@ packages = [
     { include = "commands/tech" },
     { include = "commands/my"},
     { include = "commands/ops"},
-    { include = "commands/cli"},
-    { include = "md_processing/md_commands"},
-    { include = "md_processing/md_processing_utils"},
-    { include = "md_processing"}
+    { include = "commands/cli"}
     ]
 
 [tool.poetry.dependencies]
