--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyegeria"
-version = "5.3.9.9.6"
+version = "5.3.10"
 
 license = 'Apache 2.0'
 authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
@@ -26,6 +26,8 @@ packages = [
     { include = "md_processing/md_processing_utils"},
     { include = "md_processing"}
     ]
+include = ["md_Processing/data/"]
+
 
 [tool.poetry.dependencies]
 #python = "^3.11" # 3.12 seemed to fail
