Updated Dr.Egeria data designer support.
Signed-off-by: Dan Wolfson <dwolfson@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ textual = "*"
 mermaid-py = "*"
 psycopg2-binary = "^2.9.9"
 jupyter-notebook-parser = "^0.1.4"
+loguru = "^0.7.3"
 
 
 [build-system]
