--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyegeria"
-version = "5.4.0-dev1"
+version = "5.4.0-dev4"
 
 license = 'Apache 2.0'
 authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
@@ -100,6 +100,11 @@ isort = "^6.0.0"
 
     dr_egeria_md = "commands.cat.dr_egeria_md:process_markdown_file"
     dr_egeria_jupyter = "commands.cat.dr_egeria_jupyter:process_jupyter_notebook"
+
+    list_data_structures_full = "commands.cat.list_data_structures_full:main"
+    list_data_structures = "commands.cat.list_data_designer:main_structs"
+    list_data_fields = "commands.cat.list_data_designer:main_fields"
+    list_data_classes = "commands.cat.list_data_designer:main_classes"
 
 
     list_collections = "commands.cat.list_collections:main"
