--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyegeria"
-version = "5.4.0-dev14"
+version = "5.4.0.2"
 
 license = 'Apache 2.0'
 authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
@@ -47,6 +47,9 @@ mermaid-py = "*"
 psycopg2-binary = "^2.9.9"
 jupyter-notebook-parser = "^0.1.4"
 loguru = "^0.7.3"
+poetry-core = "^2.1.3"
+inflect = "^7.5.0"
+
 
 
 [build-system]
