--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyegeria"
-version = "5.4.0.2"
+version = "5.4.0.3"
 
 license = 'Apache 2.0'
 authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
@@ -49,6 +49,7 @@ jupyter-notebook-parser = "^0.1.4"
 loguru = "^0.7.3"
 poetry-core = "^2.1.3"
 inflect = "^7.5.0"
+pydantic = "^2.11.7"
 
 
 
@@ -70,6 +71,7 @@ black = "^25.1.0"
 isort = "^6.0.0"
 
 [tool.poetry.scripts]
+    list_format_set = "commands.cat.list_format_set:main"
     list_assets = "commands.cat.list_assets:main"
     list_tech_types = "commands.cat.list_tech_types:main"
     get_asset_graph = "commands.cat.get_asset_graph:main"
