--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,76 +1,48 @@
-[tool.poetry]
-name = "pyegeria"
-version = "5.4.6"
+# PDX-License-Identifier: Apache-2.0
+# Copyright Contributors to the ODPi Egeria project.
 
-license = 'Apache 2.0'
-authors = ["Dan Wolfson <dan.wolfson@pdr-associates.com>"]
+[project]
+name = "pyegeria"
+version = "5.4.7"
+license = 'Apache-2.0'
+license-files = ["LICENSE"]
+authors = [{name = "Dan Wolfson", email = "dan.wolfson@pdr-associates.com"},]
 readme = "README.md"
 description = "A python client for Egeria"
 keywords = ["egeria", "metadata", "governance"]
-homepage = "https://github.com/odpi/egeria-python"
-
-repository = "https://github.com/odpi/egeria-python"
+requires-python =">3.12"
 classifiers = [
-    "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
  ]
-packages = [
-    { include = "pyegeria"},
-    { include = "commands" },
-    { include = "md_processing"}
-    ]
-include = ["md_Processing/data/"]
 
 
-[tool.poetry.dependencies]
-#python = "^3.11" # 3.12 seemed to fail
-python = ">3.12,<4.0.0"
-#python = "^3.13" Need to upgrade jupyter image
-httpx = "*"
-rich = "*"
-validators = "*"
-urllib3 = "*"
-requests = "*"
-pytest = "^8.3.5"
-jupyter = "*"
-click = "*"
-trogon = "^0.6.0"
-textual = "*"
-mermaid-py = "*"
-psycopg2-binary = "^2.9.9"
-jupyter-notebook-parser = "^0.1.4"
-loguru = "^0.7.3"
-poetry-core = "^2.1.3"
-inflect = "^7.5.0"
-pydantic = "^2.11.7"
-pydantic-settings = "^2.10.1"
-pydevd-pycharm = "^252.23892.364"
-wcwidth = "==0.2.13"
-altair = "^5.5.0"
-modelcontextprotocol = "^0.1.0"
-mcp = "^1.15.0"
+dependencies = [
+    "httpx",
+    "rich",
+    "validators",
+    "urllib3",
+    "requests",
+    "jupyter",
+    "click",
+    "trogon",
+    "textual",
+    "mermaid-py",
+    "psycopg2-binary",
+    "jupyter-notebook-parser",
+    "loguru",
+    "inflect",
+    "pydantic >=2.11.7",
+    "pydantic-settings >= 2.10.1",
+    "pydevd-pycharm >=252.23892.364",
+    "wcwidth",
+    "altair",
+    "modelcontextprotocol",
+    "mcp>=1.15.0",
+]
 
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.poetry.group.test]
-optional = true
-
-[tool.poetry.group.test.dependencies]
-pytest = "^8.2.2"
-
-
-
-[tool.poetry.group.dev.dependencies]
-flake8 = "^7.1.1"
-black = "^25.1.0"
-isort = "^6.0.0"
-
-[tool.poetry.scripts]
-    pyegeria-mcp = "pyegeria.mcp.server:main"
+[project.scripts]
+    pyegeria-mcp = "pyegeria.mcp_server:main"
     list_format_set = "commands.cat.list_format_set:main"
     list_assets = "commands.cat.list_assets:main"
     list_tech_types = "commands.cat.list_tech_types:main"
@@ -88,7 +60,8 @@ isort = "^6.0.0"
     list_deployed_catalogs = "commands.cat.list_deployed_catalogs:main"
     list_deployed_databases = "commands.cat.list_deployed_databases:main"
     list_deployed_schemas = "commands.cat.list_deployed_database_schemas:main"
-    list_deployed_servers = "commands.cat.list_deployed_servers.py:main"
+    # CORRECTED: Removed the unnecessary '.py' from the module path
+    list_deployed_servers = "commands.cat.list_deployed_servers:main"
     create_glossary = "commands.cat.glossary_actions:create_glossary"
     delete_glossary = "commands.cat.glossary_actions:delete_glossary"
     create_term = "commands.cat.glossary_actions:create_term"
@@ -119,8 +92,10 @@ isort = "^6.0.0"
     monitor_asset_events = "commands.ops.monitor_asset_events:main"
     monitor_coco_status = "commands.ops.monitor_coco_status:main"
     monitor_engine_activity = "commands.ops.monitor_engine_activity:main_live"
-    list_engine_activity = "commands.ops.monitor_engine_activity:main_paging "
-    list_engine_activity_compressed = "commands.ops.monitor_engine_activity_c:main_paging "
+    # CORRECTED: Removed trailing space
+    list_engine_activity = "commands.ops.monitor_engine_activity:main_paging"
+    # CORRECTED: Removed trailing space
+    list_engine_activity_compressed = "commands.ops.monitor_engine_activity_c:main_paging"
     monitor_engine_activity_compressed = "commands.ops.monitor_engine_activity_c:main_live"
     refresh_gov_eng_config = "commands.ops.gov_server_actions:refresh_gov_eng_config"
     monitor_gov_eng_status = "commands.ops.monitor_gov_eng_status:main_live"
@@ -187,3 +162,18 @@ isort = "^6.0.0"
     list_solution_roles = "commands.tech.list_solution_roles:main"
     list_solution_components = "commands.tech.list_solution_components:main"
     delete_element = "commands.tech.generic_actions:delete_element"
+
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.2",
+    "wheel>=0.45.1",
+]
+
+[build-system]
+requires = ["setuptools>=42", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+include = ["pyegeria", "pyegeria.*", "commands", "commands.*", "md_processing", "md_processing.*"]
+exclude = ["tests"]
