--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@
 
 [project]
 name = "pyegeria"
-version = "5.4.7"
+version = "5.4.7.1"
 license = 'Apache-2.0'
 license-files = ["LICENSE"]
 authors = [{name = "Dan Wolfson", email = "dan.wolfson@pdr-associates.com"},]
@@ -26,7 +26,6 @@ dependencies = [
     "jupyter",
     "click",
     "trogon",
-    "textual",
     "mermaid-py",
     "psycopg2-binary",
     "jupyter-notebook-parser",
@@ -175,5 +174,8 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-include = ["pyegeria", "pyegeria.*", "commands", "commands.*", "md_processing", "md_processing.*"]
+include = ["pyegeria", "pyegeria.*", "commands", "commands.*", "md_processing", "md_processing.*" ]
 exclude = ["tests"]
+
+[tool.setuptools.package-data]
+"md_processing" = ["data/*.json", "data/*.py"]
