--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@
 
 [project]
 name = "pyegeria"
-version = "5.4.7.7"
+version = "5.4.7.8"
 license = 'Apache-2.0'
 license-files = ["LICENSE"]
 authors = [{name = "Dan Wolfson", email = "dan.wolfson@pdr-associates.com"},]
@@ -42,7 +42,7 @@ dependencies = [
 
 [project.scripts]
     pyegeria-mcp = "pyegeria.mcp_server:main"
-    list_format_set = "commands.cat.list_format_set:main"
+    run_report = "commands.cat.run_report:main"
     list_assets = "commands.cat.list_assets:main"
     list_tech_types = "commands.cat.list_tech_types:main"
     get_asset_graph = "commands.cat.get_asset_graph:main"
