Interim changes exploring testing frameworks. Unit tests will be rolled back as they don't provide enough value for the effort. Focus will be on live and integration testing. Also made changes for external_links to accomodate url change - suspect there is a backend bug.
Signed-off-by: Dan Wolfson <dwolfson@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
     "click",
     "trogon",
     "mermaid-py",
-    "psycopg2-binary",
+    "psycopg2-binary>=2.9.11",
     "jupyter-notebook-parser",
     "loguru",
     "inflect",
@@ -180,3 +180,6 @@ exclude = ["tests"]
 
 [tool.setuptools.package-data]
 "md_processing" = ["data/*.json", "data/*.py"]
+
+[project.optional-dependencies]
+test = ["pytest"]
