--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,2 +1,14 @@
 [pytest]
-addopts = --tb=short -r fE -q  -s --disable-warnings
+addopts = --tb=short -r fE -q -s --disable-warnings
+markers =
+    unit: Unit tests using mocks and monkeypatching
+    integration: Integration tests requiring live Egeria instance
+    slow: Tests that take longer to run
+    auth: Authentication-related tests
+    format_sets: Format set execution tests
+    mcp: MCP-specific functionality tests
+testpaths = tests
+python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
+asyncio_mode = auto
