Updated geospatial example to use new Digital Product features, Updated Dr.E to support URL in referenceables, Search Keywords, and working on Journal Entries
Signed-off-by: Dan Wolfson <dwolfson@users.noreply.github.com>

--- a/config/config.json
+++ b/config/config.json
@@ -43,6 +43,7 @@
   "User Profile": {
     "Egeria Home Collection": "MyHome",
     "Egeria Home Glossary Name": "Egeria-Markdown",
-    "Egeria Local Qualifier": "mylocal"
+    "Egeria Local Qualifier": "mylocal",
+    "Egeria Usage Level": "Advanced"
   }
 }
