--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@
 
 [project]
 name = "pyegeria"
-version = "5.4.8.3"
+version = "5.4.8.8"
 license = 'Apache-2.0'
 license-files = ["LICENSE"]
 authors = [{name = "Dan Wolfson", email = "dan.wolfson@pdr-associates.com"},]
@@ -36,8 +36,7 @@ dependencies = [
     "pydevd-pycharm >=253.27642.35",
     "wcwidth",
     "altair",
-    "modelcontextprotocol",
-    "mcp>=1.18.0",
+    "mcp >=0.1",
     "markers>=0.3.0",
     "pytest-asyncio>=1.2.0",
 ]
@@ -165,6 +164,7 @@ dependencies = [
     delete_element = "commands.tech.generic_actions:delete_element"
 
 
+
 [dependency-groups]
 dev = [
     "pytest>=8.4.2",
@@ -176,7 +176,7 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-include = ["pyegeria", "pyegeria.*", "commands", "commands.*", "md_processing", "md_processing.*" ]
+include = ["pyegeria", "pyegeria.*", "commands", "commands.*", "md_processing", "md_processing.*" , "examples"]
 exclude = ["tests"]
 
 [tool.setuptools.package-data]
