--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@
 
 [project]
 name = "pyegeria"
-version = "5.4.8.11"
+version = "5.4.8.12"
 license = 'Apache-2.0'
 license-files = ["LICENSE"]
 authors = [{name = "Dan Wolfson", email = "dan.wolfson@pdr-associates.com"},]
@@ -163,6 +163,8 @@ dependencies = [
     list_solution_components = "commands.tech.list_solution_components:main"
     delete_element = "commands.tech.generic_actions:delete_element"
 
+    gen_report_specs = "md_processing.md_processing_utils.gen_report_specs"
+
 
 
 [dependency-groups]
@@ -177,10 +179,11 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
 include = ["pyegeria", "pyegeria.*", "commands", "commands.*", "md_processing", "md_processing.*" , "examples"]
-exclude = ["tests"]
+exclude = ["tests", "config"]
 
 [tool.setuptools.package-data]
 "md_processing" = ["data/*.json", "data/*.py"]
+
 
 [project.optional-dependencies]
 test = ["pytest"]
