--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@
 
 [project]
 name = "pyegeria"
-version = "5.4.8.12"
+version = "5.4.9.1"
 license = 'Apache-2.0'
 license-files = ["LICENSE"]
 authors = [{name = "Dan Wolfson", email = "dan.wolfson@pdr-associates.com"},]
@@ -26,7 +26,7 @@ dependencies = [
     "jupyter",
     "click",
     "trogon",
-    "mermaid-py",
+#    "mermaid-py",
     "psycopg2-binary>=2.9.11",
     "jupyter-notebook-parser",
     "loguru",
@@ -163,7 +163,7 @@ dependencies = [
     list_solution_components = "commands.tech.list_solution_components:main"
     delete_element = "commands.tech.generic_actions:delete_element"
 
-    gen_report_specs = "md_processing.md_processing_utils.gen_report_specs"
+    gen_report_specs = "md_processing.md_processing_utils.gen_report_specs:main"
 
 
 
@@ -178,7 +178,7 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-include = ["pyegeria", "pyegeria.*", "commands", "commands.*", "md_processing", "md_processing.*" , "examples"]
+include = ["pyegeria", "pyegeria.*", "commands", "commands.*", "commands.cat.*", "md_processing", "md_processing.*" , "examples"]
 exclude = ["tests", "config"]
 
 [tool.setuptools.package-data]
