--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@
 
 [project]
 name = "pyegeria"
-version = "5.4.9.5"
+version = "5.4.9.6"
 license = 'Apache-2.0'
 license-files = ["LICENSE"]
 authors = [{name = "Dan Wolfson", email = "dan.wolfson@pdr-associates.com"},]
@@ -26,7 +26,7 @@ dependencies = [
     "jupyter",
     "click",
     "trogon",
-#    "mermaid-py",
+    #    "mermaid-py",
     "psycopg2-binary>=2.9.11",
     "jupyter-notebook-parser",
     "loguru",
@@ -39,6 +39,7 @@ dependencies = [
     "mcp >=0.1",
     "markers>=0.3.0",
     "pytest-asyncio>=1.2.0",
+    "python-dotenv>=1.1.1",
 ]
 
 [project.scripts]
