--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,7 +100,7 @@ dependencies = [
     list_engine_activity = "commands.ops.monitor_engine_activity:main_paging"
     monitor_engine_activity = "commands.ops.monitor_engine_activity:main_live"
     refresh_gov_eng_config = "commands.ops.gov_server_actions:refresh_gov_eng_config"
-    monitor_gov_eng_status = "commands.ops.monitor_gov_eng_status:main_live"
+    monitor_engine_status = "commands.ops.monitor_engine_status:main_live"
     list_engine_status = "commands.ops.monitor_engine_status:main_paging"
     monitor_daemon_status = "commands.ops.monitor_daemon_status:main_live"
     list_daemon_status = "commands.ops.monitor_daemon_status:main_paging"
