--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     "markers>=0.3.0",
     "pytest-asyncio>=1.2.0",
     "python-dotenv>=1.1.1",
+    "pytest>=8.4.2",
 ]
 
 [project.scripts]
