Fixing config loading for Dr. Egeria
Signed-off-by: Dan Wolfson <dan.wolfson@pdr-associates.com>

--- a/config/config.json
+++ b/config/config.json
@@ -8,8 +8,8 @@
     "Console Width": 151,
     "Egeria Inbox": "egeria-inbox",
     "Egeria Outbox": "egeria-outbox",
-    "Dr.Egeria Inbox": "inbox/dr-egeria-inbox",
-    "Dr.Egeria Outbox": "outbox/dr-egeria-outbox",
+    "Dr.Egeria Inbox": "egeria-inbox/dr-egeria-inbox",
+    "Dr.Egeria Outbox": "egeria-outbox/dr-egeria-outbox",
     "Egeria Engine Host": "qs-engine-host",
     "Egeria Engine Host URL": "",
     "Egeria Glossary Path": "glossary",
@@ -22,8 +22,8 @@
     "Egeria Platform URL": "https://localhost:9443",
     "Egeria View Server": "qs-view-server2",
     "Egeria View Server URL": "https://localhost:9443",
-    "Pyegeria Root": "/Users/dwolfson/localGit/egeria-python/sample-data",
-    "Pyegeria Config Directory": "/Users/dwolfson/localGit/egeria-python/config",
+    "Pyegeria Root": "sample-data",
+    "Pyegeria Config Directory": "config",
     "Pyegeria Publishing Root": "http://localhost:8085/outbox",
     "Pyegeria User Report Specs Dir": "~/.pyegeria/report_specs"
   },
